<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Guess The Pokemon</string>
    <string name="action_settings">Settings</string>
    <string name="menu_title">Guess The Pokemon</string>
    <string name="menu_play">Play</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_other">List of Pokemons</string>
    <string name="button_text_acceptceptar">Accept</string>
    <string name="question">Who is this?</string>
    <string name="loser_text">Try Again</string>
    <string name="total_points">Attempts :  </string>
    <string name="msg_win">You have guessed all the Pokemons! Yay!</string>
    <string name="msg_lost"> Game Over! Try Again! </string>
</resources>
